# Online-Rust-Compiler

./: .gitignore  README.md  rust_compiler_api.postman_collection.json
backend/: .gitignore  Cargo.toml  README.md
backend/src/: auth.rs  db.rs  docs.rs  main.rs  snippets.rs
backend/temp/: temp_8a135099-ea61-439a-a621-dbaf6c829d90.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BackgroundAnimation.tsx  Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Login.tsx  Register.tsx
