[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
jsonwebtoken = "9"
argon2 = "0.5"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
